--- a/HOME_LONE/pom.xml
+++ b/HOME_LONE/pom.xml
@@ -27,7 +27,17 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
+  <distributionManagement>
+		 <snapshotRepository>
+		    <id>nexusRepo</id>
+		    <url>http://3.84.50.37:8081/repository/sample-snapshot/</url>
+		 </snapshotRepository>
+		
+		 <repository>
+		    <id>nexusRepo</id>
+		    <url>http://3.84.50.37:8081/repository/sample-release/</url>
+		 </repository>
+  </distributionManagement>
   <build>
     <finalName>HOME_LONE</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
